# torq

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Readme.md
src/: main.cpp
src/parser/: lexer.cpp  lexer.hpp
tests/: lexer.cpp
tests/data/: data_001.tq  data_002.tq
